<resources>
    <string name="app_name">Pocket Soccer</string>
    <string name="games_played">Games played:</string>
    <string name="_0">0</string>
    <string name="_0p">0%</string>
    <string name="wins">Wins</string>
    <string name="loses">Loses</string>
    <string name="goal_scored">Goal scored:</string>
    <string name="hit_ratio">Hit ratio:</string>
    <string name="goal_conceded">Goal conceded:</string>
    <string name="back">BACK</string>
    <string name="goals">Goals</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_7">7</string>
    <string name="_2m">2</string>
    <string name="_5m">5</string>
    <string name="_10m">10</string>
    <string name="club">Club</string>
    <string name="speed">Speed</string>
    <string name="x2">x2</string>
    <string name="x5">x5</string>
    <string name="pocket_soccer">POCKET SOCCER</string>
    <string name="new_game">New game</string>
    <string name="resume_game">Resume game</string>
    <string name="show_statistics">show statistics</string>
    <string name="change_parameters">Change parameters</string>
    <string name="minutes">Minutes</string>
    <string name="terrain">Terrain</string>
    <string name="first_player">Player 1</string>
    <string name="second_player">Player 2</string>
    <string name="first_player_name">First player name:</string>
    <string name="second_player_name">Second player name:</string>
    <string name="kick_off">Kick off</string>
    <string name="one_robot">One robot</string>
    <string name="two_robots">Two robots</string>
    <string name="_0_wins">0 wins</string>
    <string name="winner">Winner</string>
    <string name="erase">Erase</string>
    <string name="none">None</string>
    <string name="save">Save</string>
    <string name="player_1">Player_1</string>
    <string name="player_2">Player_2</string>
    <string name="_00_00">0m 00s</string>
    <string name="time">Time</string>
    <string name="player_x_wins">DRAW!</string>
    <string name="player_1_wins">PLAYER 1 WINS!</string>
    <string name="player_2_wins">PLAYER 2 WINS!</string>
    <string name="continueFromView">Continue</string>
    <string name="clear">Clear</string>
</resources>
