<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/main_activity_background_image"
    tools:context=".ShowStatisticsActivity"
    android:padding="10dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/firstPlayerName"
            android:text="@string/first_player"
            android:textSize="22sp"
            app:fontFamily="@font/dancing_script"
            android:textColor="@android:color/background_light"
            android:gravity="center"
            android:layout_width="0sp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/numWinTextView"
            android:text="@string/wins"
            android:gravity="center"
            android:layout_width="0sp"
            android:layout_weight="1"
            android:textSize="22sp"
            app:fontFamily="@font/dancing_script"
            android:textColor="@android:color/background_light"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/secondPlayerName"
            android:text="@string/second_player"
            android:textSize="22sp"
            app:fontFamily="@font/dancing_script"
            android:textColor="@android:color/background_light"
            android:gravity="center"
            android:layout_width="0sp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/numLosesTextView"
            android:text="@string/loses"
            android:gravity="center"
            android:layout_width="0sp"
            android:layout_weight="1"
            android:textSize="22sp"
            app:fontFamily="@font/dancing_script"
            android:textColor="@android:color/background_light"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/scoreTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/backButton"
                    android:paddingTop="22dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center"
                    android:textSize="22sp"
                    android:drawableLeft="@drawable/back_arrow"
                    android:background="@android:color/transparent"
                    android:onClick="onClickBackButton"
                    android:paddingBottom="10dp"
                    app:fontFamily="@font/dancing_script"
                    android:text="@string/back"
                    android:drawableStart="@drawable/back_arrow" />

                <Button
                    android:id="@+id/clearAllRecords"
                    android:paddingTop="22dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center"
                    android:textSize="22sp"
                    android:drawableLeft="@drawable/back_arrow"
                    android:background="@android:color/transparent"
                    android:onClick="onClickDeleteAllRecordsButton"
                    android:paddingBottom="10dp"
                    app:fontFamily="@font/dancing_script"
                    android:text="@string/clear"
                    android:drawableStart="@drawable/clear_all_records" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>